<resources>
    <string name="app_name">Fisherman</string>

    <string name="map_api">AIzaSyCSJWoHVahSIuDstMjCKHY8FMuPBZr4pCY</string>

    <string name="register">Register</string>
    <string name="enter_name_as_per_adhar">Enter name as per Adhar</string>
    <string name="name_as_per_adhar">Name as per Adhar</string>
    <string name="name">Name</string>
    <string name="adhar_number">Adhar Number</string>
    <string name="_1234_5678_1234">1234 5678 1234</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_87973_12098">87973 12098</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="conform_password">Conform Password</string>
    <string name="already_have_an_account_login">Already have an Account? login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="father_name">Father Name</string>
    <string name="parent_number">Parent Number</string>
    <string name="door_no">Door No</string>
    <string name="street">Street</string>
    <string name="town_or_village">Town or Village</string>
    <string name="map">Map</string>
    <string name="work">Work</string>
    <string name="profile">Profile</string>
    <string name="fisherman_details">Fisherman Details</string>
    <string name="welcome">Welcome</string>
    <string name="personal_information">Personal Information</string>
    <string name="adhar_details">Adhar Details</string>
    <string name="town">Town or Village :</string>
    <string name="streetname">Street :</string>
    <string name="door">Door no :</string>
    <string name="adhar_num">Adhar Number :</string>
    <string name="mo">Mobile No :</string>
    <string name="parent_no">Parent No :</string>
    <string name="fname">Father Name :</string>
    <string name="add_daily_works">Add Daily Works</string>
    <string name="fish_name">Fish Name</string>
    <string name="my_works">My Works</string>
</resources>